# OpenGLSandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
sandbox/: CMakeLists.txt
sandbox-core/libs/glad/: CMakeLists.txt
sandbox-core/libs/glad/include/glad/: glad.h
sandbox-core/libs/glad/src/: glad.c
sandbox-core/libs/stb/: CMakeLists.txt
sandbox-core/src/: Core.h  sbpch.h
sandbox-core/src/Core/Base/: Application.cpp  Application.h  Base.h  Input.h  Log.cpp  Log.h  Timer.cpp  Window.h
sandbox-core/src/Core/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Context.cpp  Context.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OpenGLDebuggerCallback.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Utils.h  VertexArray.cpp  VertexArray.h
sandbox-core/src/Platform/GLFW/: GLFWInput.cpp  GLFWInput.h  GLFWWindow.cpp
sandbox/resources/models/: airplane.glb  bunny.glb  cat.glb  tower.glb
sandbox/src/: SandboxApp.cpp  SandboxLayer.cpp
scripts/: Run.py  Setup.py  SetupAndCompile.py  SetupWindow.py  Utils.py  dependencies.cmake
